--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="setter">This is my task</div>
         <div class="setter">This is my task last</div>
     </div>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
