--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
+        <div class="setter">This is my task 2</div>
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
@@ -53,8 +54,7 @@
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
+        <div class="setter">This is my task3</div>
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
         <div class="setter">This is my task</div>
