--- a/index.html
+++ b/index.html
@@ -6,63 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskManager - CodeQuillCrafts</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <h1 id="title">Task Manager</h1>
-    <div class="setter">
-        <input type="text" class="setterInput" placeholder="Enter Your Task ...">
-        <input type="button" value="Add Task" class="setterBtn">
-    </div>
+    <form class="setter">
+        <input type="text" class="setterInput" placeholder="Enter Your Task ..." required>
+        <input type="submit" value="Add Task" class="setterBtn">
+    </form>
     <div class="getter">
-        <div class="setter">This is my task 1</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task 2</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task3</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task</div>
-        <div class="setter">This is my task last</div>
+        <!-- <div class="setter">
+            <p>This is my task 1</p>
+            <div class="icons">
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+                <i class="fa fa-trash" aria-hidden="true"></i>
+            </div>
+        </div> -->
     </div>
     <script src="app.js"></script>
 </body>
